# Programming-contests

./: .gitignore  CMakeLists.txt  README.md  final_product_chapter_1_input.txt  output.txt  snake_scales_chapter_1_input.txt  zone_in_input.txt
Ieeextreme17/: BadPasswords.cpp  Ice cube.cpp  Poetry.cpp  README.md  caesar_redux.cpp  coolsum.cpp  dalvik.cpp  happy_numbers.cpp  labradoodle.py  long lines.py  national highway system.cpp  ordered-permutations.cpp  resaturant_cipher.cpp  rumors.py  war_games.py  watershed.cpp
Meta Hackercup 2023/Practice Round/: Cheeseburger Corollary 1.cpp  Cheeseburger Corollary 2.cpp  Dim Sum Delivery.cpp
Meta Hackercup 2024/Practice Round/:  Two Apples a Day.cpp
Meta Hackercup 2024/Round 1/: Here Comes Santa Claus.cpp  Sum 41 (Chapter 1).cpp
Meta Hackercup 2024/Round 2/: Ready, Go (Part 1).cpp
Meta Hackercup 2025/Practice Round/: Warm Up.cpp  zoneIn.cpp
Meta Hackercup 2025/Round 1/: Final product.cpp  Scale1.cpp  Scales2.cpp
