cmake_minimum_required(VERSION 3.31)
project(Programming_contests)

set(CMAKE_CXX_STANDARD 14)

include_directories("Meta Hackercup 2025")

add_executable(Programming_contests
        .idea/codeStyles/codeStyleConfig.xml
        .idea/codeStyles/Project.xml
        .idea/.gitignore
        .idea/editor.xml
        .idea/modules.xml
        .idea/Programming-contests.iml
        .idea/vcs.xml
        .idea/workspace.xml
        Ieeextreme17/.idea/.gitignore
        Ieeextreme17/.idea/Ieeextreme17.iml
        Ieeextreme17/.idea/modules.xml
        Ieeextreme17/BadPasswords.cpp
        Ieeextreme17/caesar_redux.cpp
        Ieeextreme17/coolsum.cpp
        Ieeextreme17/dalvik.cpp
        Ieeextreme17/happy_numbers.cpp
        "Ieeextreme17/Ice cube.cpp"
        Ieeextreme17/labradoodle.py
        "Ieeextreme17/long lines.py"
        "Ieeextreme17/national highway system.cpp"
        Ieeextreme17/ordered-permutations.cpp
        Ieeextreme17/Poetry.cpp
        Ieeextreme17/README.md
        Ieeextreme17/resaturant_cipher.cpp
        Ieeextreme17/rumors.py
        Ieeextreme17/war_games.py
        Ieeextreme17/watershed.cpp
        "Meta Hackercup 2023/Practice Round/ Two Apples a Day.cpp"
        "Meta Hackercup 2023/Practice Round/Cheeseburger Corollary 1.cpp"
        "Meta Hackercup 2023/Practice Round/Cheeseburger Corollary 2.cpp"
        "Meta Hackercup 2023/Practice Round/Dim Sum Delivery.cpp"
        "Meta Hackercup 2023/Round 1/Here Comes Santa Claus.cpp"
        "Meta Hackercup 2023/Round 1/Sum 41 (Chapter 1).cpp"
        "Meta Hackercup 2023/Round 2/Ready, Go (Part 1).cpp"
        "Meta Hackercup 2025/Practice Round/Warm Up.cpp"
        .clang-format
        .gitignore
        README.md
        "Meta Hackercup 2025/Practice Round/zoneIn.cpp"
)
